tests/semantic_cases/invalid/typed_var_unknown_type.ob0
MODULE Main;
VAR x: Missing;
BEGIN
  x := 1
END Main.
